--- a/app/views/candidatos/new.html.erb
+++ b/app/views/candidatos/new.html.erb
@@ -1,9 +1,23 @@
-<h1>New candidato</h1>
+<h1>Cadastro de Candidato</h1>
 
-<%= render "form", candidato: @candidato %>
+<%= form_for @candidato do |f| %>
+  <%= render 'shared/errors', object:@candidato %>
 
-<br>
+  <%= f.label :nome %>
+  <%= f.text_field :nome %>
 
-<div>
-  <%= link_to "Back to candidatos", candidatos_path %>
-</div>
+  <%= f.label :email %>
+  <%= f.email_field :email %>
+
+  <%= f.label :cpf %>
+  <%= f.text_field :cpf %>
+
+  <%= f.label :data %>
+  <%= f.date_field :data %>
+
+  <%= f.label :telefone %>>
+  <%= f.text_field :telefone %>
+
+  <%= f.submit 'Salvar Candidato' %>>
+
+<% end %>
