--- a/app/views/vagas/index.html.erb
+++ b/app/views/vagas/index.html.erb
@@ -1,14 +1,31 @@
-<p style="color: green"><%= notice %></p>
+<h1>Lista de Vagas</h1>
 
-<h1>Vagas</h1>
-
-<div id="vagas">
+<table>
+  <thead>
+  <tr>
+    <th>Título</th>
+    <th>Descrição</th>
+    <th>Salário</th>
+    <th>Empregador</th>
+    <th>Ações</th>
+  </tr>
+  </thead>
+  <tbody>
   <% @vagas.each do |vaga| %>
-    <%= render vaga %>
-    <p>
-      <%= link_to "Show this vaga", vaga %>
-    </p>
+    <tr>
+      <td><%= vaga.titulo %></td>
+      <td><%= vaga.descricao %></td>
+      <td><%= vaga.salario %></td>
+      <td><%= vaga.empregador.nome %></td>
+      <td>
+        <%= link_to 'Excluir', vaga, method: :delete, data: { confirm: 'Tem certeza que deseja excluir esta vaga?' } %>
+      </td>
+      <td>
+        <%= link_to 'Editar', edit_vaga_path(vaga) %>
+      </td>
+    </tr>
   <% end %>
-</div>
+  </tbody>
+</table>
 
-<%= link_to "New vaga", new_vaga_path %>
+<%= link_to 'Voltar para a lista de empregadores', empregadores_path %>
