--- a/app/views/candidaturas/edit.html.erb
+++ b/app/views/candidaturas/edit.html.erb
@@ -1,10 +1,10 @@
-<h1>Editing candidatura</h1>
+<h1>Editar Candidatura</h1>
 
-<%= render "form", candidatura: @candidatura %>
+<%= form_for @candidatura do |f| %>
+  <%= render 'shared/errors', object: @candidatura %>
 
-<br>
+  <%= f.label :mensagem %>
+  <%= f.text_area :mensagem %>
 
-<div>
-  <%= link_to "Show this candidatura", @candidatura %> |
-  <%= link_to "Back to candidaturas", candidaturas_path %>
-</div>
+  <%= f.submit 'Salvar Edição' %>
+<% end %>
