--- a/app/views/empregadors/index.html.erb
+++ b/app/views/empregadors/index.html.erb
@@ -14,7 +14,7 @@
   <tbody>
     <% @empregadors.each do |empregador| %>
         <tr>
-          <td><%= empregador.none %></td>
+          <td><%= empregador.nome %></td>
           <td><%= empregador.nomeEmpresa %></td>
           <td><%= empregador.email %></td>
           <td><%= empregador.endereco %></td>
