--- a/app/views/empregadors/show.html.erb
+++ b/app/views/empregadors/show.html.erb
@@ -1,17 +1,7 @@
 <h1>Detalhes do Empregador</h1>
 
-<p><strong>Nome:</strong> <%= @empregador.none %></p>
-<p><strong>Nome da Empresa:</strong> <%= @empregador.nome_empresa %></p>
-<p><strong>E-mail:</strong> <%= @empregador.email %></p>
-<p><strong>Endereço:</strong> <%= @empregador.endereco %></p>
-<p><strong>Telefone:</strong> <%= @empregador.telefone %></p>
-<p><strong>CNPJ:</strong> <%= @empregador.cnpj %></p>
-
-<!-- app/views/empregadores/show.html.erb -->
-<h1>Detalhes do Empregador</h1>
-
 <p><strong>Nome:</strong> <%= @empregador.nome %></p>
-<p><strong>Nome da Empresa:</strong> <%= @empregador.nome_empresa %></p>
+<p><strong>Nome da Empresa:</strong> <%= @empregador.nomeEmpresa %></p>
 <p><strong>Email:</strong> <%= @empregador.email %></p>
 <p><strong>Endereço:</strong> <%= @empregador.endereco %></p>
 <p><strong>Telefone:</strong> <%= @empregador.telefone %></p>
