--- a/app/views/vagas/index.html.erb
+++ b/app/views/vagas/index.html.erb
@@ -1,31 +1,15 @@
+<p style="color: green"><%= notice %></p>
+
 <h1>Lista de Vagas</h1>
 
-<table>
-  <thead>
-  <tr>
-    <th>Título</th>
-    <th>Descrição</th>
-    <th>Salário</th>
-    <th>Empregador</th>
-    <th>Ações</th>
-  </tr>
-  </thead>
-  <tbody>
+<div id = "vagas">
   <% @vagas.each do |vaga| %>
-    <tr>
-      <td><%= vaga.titulo %></td>
-      <td><%= vaga.descricao %></td>
-      <td><%= vaga.salario %></td>
-      <td><%= vaga.empregador.nome %></td>
-      <td>
-        <%= link_to 'Excluir', vaga, method: :delete, data: { confirm: 'Tem certeza que deseja excluir esta vaga?' } %>
-      </td>
-      <td>
-        <%= link_to 'Editar', edit_vaga_path(vaga) %>
-      </td>
-    </tr>
+    <%= render vaga %>
+    <p>
+      <%= link_to "Veja a vaga", vaga %>
+    </p>
   <% end %>
-  </tbody>
-</table>
+</div>
 
-<%= link_to 'Voltar para a lista de empregadores', empregadores_path %>
+<%= link_to "Nova vaga", new_vaga_path %>
+
